# lx

./: .gitmodules  CMakeLists.txt  README.md
assets/shaders/: directional_light.fragment.glsl  directional_light.vertex.glsl  light.vertex.glsl  point_light.fragment.glsl  vert.vertex.glsl
src/: main.cpp
src/assets/shaders/: frag.fragment.glsl  temp.vertex.glsl  vert.vertex.glsl
src/core/: CMakeLists.txt  input.cpp  input.h  keyboard.cpp  keyboard.h  window.cpp  window.h
src/core/graphic/: CMakeLists.txt  buffer_data_type.cpp  buffer_data_type.h  buffer_element.cpp  buffer_element.h  context.cpp  context.h  data_buffer.cpp  data_buffer.h  program.cpp  program.h  shader.cpp  shader.h  shader_type.h  texture.h  vertex_array.cpp  vertex_array.h  window.cpp  window.h
src/graphic/: CMakeLists.txt  buffer_element.h  camera.cpp  camera.h  camera_type.h  context.h  data_buffer.cpp  data_buffer.h  index_buffer.cpp  index_buffer.h  program.cpp  program.h  shader.cpp  shader.h  texture.cpp  texture.h  vertex_array.h
src/primitives/: CMakeLists.txt  cube.cpp  cube.h
src/test/: test.h
